[package]
name = "scalp"
version = "0.1.1"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/scalp/latest/scalp/"
description = "A declarative, macro-less parsing library for command-line interfaces. It provides a highly composable and extensible `Parse` trait that ensures comparative performance to a macro-full approach while offering greater flexibility and understandability."
license = "MIT"
repository = "https://github.com/Magicolo/scalp"
keywords = ["cli", "parse", "command-line", "terminal", "pretty"]
categories = ["command-line-interface", "command-line-utilities"]
build = "build.rs"
rust-version = "1.70.0"

[dependencies]
termion = "3.0.0"
term_size = "0.3.2"
orn = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"
skeptic = "0.13.7"
checkito = "1.4.0"

[build-dependencies]
skeptic = "0.13.7"
