[package]
name = "scalp"
version = "0.3.1"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/scalp/latest/scalp/"
description = "A declarative parsing library for pretty and highly customizable command-line interfaces."
license = "MIT"
repository = "https://github.com/Magicolo/scalp"
keywords = ["cli", "parse", "command-line", "terminal", "pretty"]
categories = ["command-line-interface", "command-line-utilities"]
build = "build.rs"
rust-version = "1.70.0"

[dependencies]
termion = "3.0.0"
orn = "0.4.2"
regex = "1.10.3"

[dev-dependencies]
criterion = "0.5.1"
skeptic = "0.13.7"
checkito = "1.4.2"

[build-dependencies]
skeptic = "0.13.7"
